vcluster_versioned_docs/version-0.27.0/_partials/config/networking.mdx

<details className="config-field" data-expandable="true">
<summary>

## `networking` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking}

Networking options related to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `serviceCIDR` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-serviceCIDR}

ServiceCIDR holds the service cidr for the virtual cluster. This should only be set if privateNodes.enabled is true or vCluster cannot detect the host service cidr.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `podCIDR` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">10.244.0.0/16</span> <span className="config-field-enum"></span> {#networking-podCIDR}

PodCIDR holds the pod cidr for the virtual cluster. This should only be set if privateNodes.enabled is true.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `replicateServices` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices}

ReplicateServices allows replicating services from the host within the virtual cluster or the other way around.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `toHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-toHost}

ToHost defines the services that should get synced from virtual cluster to the host cluster. If services are
synced to a different namespace than the virtual cluster is in, additional permissions for the other namespace
are required.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `from` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-toHost-from}

From is the service that should get synced. Can be either in the form name or namespace/name.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `to` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-toHost-to}

To is the target service that it should get synced to. Can be either in the form name or namespace/name.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `fromHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-fromHost}

FromHost defines the services that should get synced from the host to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `from` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-fromHost-from}

From is the service that should get synced. Can be either in the form name or namespace/name.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `to` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-replicateServices-fromHost-to}

To is the target service that it should get synced to. Can be either in the form name or namespace/name.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `resolveDNS` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS}

ResolveDNS allows to define extra DNS rules. This only works if embedded coredns is configured.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `hostname` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-hostname}

Hostname is the hostname within the vCluster that should be resolved from.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-service}

Service is the virtual cluster service that should be resolved from.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-namespace}

Namespace is the virtual cluster namespace that should be resolved from.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `target` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target}

Target is the DNS target that should get mapped to

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `hostname` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target-hostname}

Hostname to use as a DNS target

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `ip` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target-ip}

IP to use as a DNS target

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `hostService` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target-hostService}

HostService to target, format is hostNamespace/hostService

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `hostNamespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target-hostNamespace}

HostNamespace to target

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `vClusterService` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-resolveDNS-target-vClusterService}

VClusterService format is hostNamespace/vClusterName/vClusterNamespace/vClusterService

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `advanced` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-advanced}

Advanced holds advanced network options.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `clusterDomain` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default">cluster.local</span> <span className="config-field-enum"></span> {#networking-advanced-clusterDomain}

ClusterDomain is the Kubernetes cluster domain to use within the virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `fallbackHostCluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#networking-advanced-fallbackHostCluster}

FallbackHostCluster allows to fallback dns to the host cluster. This is useful if you want to reach host services without
any other modification. You will need to provide a namespace for the service, e.g. my-other-service.my-other-namespace

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `proxyKubelets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#networking-advanced-proxyKubelets}

ProxyKubelets allows rewriting certain metrics and stats from the Kubelet to "fake" this for applications such as
prometheus or other node exporters.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `byHostname` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#networking-advanced-proxyKubelets-byHostname}

ByHostname will add a special vCluster hostname to the nodes where the node can be reached at. This doesn't work
for all applications, e.g. Prometheus requires a node IP.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `byIP` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#networking-advanced-proxyKubelets-byIP}

ByIP will create a separate service in the host cluster for every node that will point to virtual cluster and will be used to
route traffic.

</summary>



</details>


</details>


</details>


</details>
